
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int NULLBASE ;
 int fprintf (int ,char*,int,char*) ;
 int stderr ;

void
bta(int byte, char *store)
{
 int check[9], i, b, tmp;

 check[0] = 0;
 check[1] = 1;
 check[2] = 2;
 check[3] = 4;
 check[4] = 8;
 check[5] = 16;
 check[6] = 32;
 check[7] = 64;
 check[8] = 128;

 tmp = byte;
 for(i = 8; i >= 0; i--) {
  if(check[i] <= tmp) {
   tmp -= check[i];
   store[i] = 'x';
  }
 }

 for(i = 0; i < 9; i++) {
  if(store[i] == 'x')
   store[i] = NULLBASE + i;
  else
   store[i] = NULLBASE;
 }
 store[9] = '\0';
 fprintf(stderr, ". braille table string for byte: 0x%x is: %s\n", byte, store);
}
